--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 audio/module0.1.wav filter=lfs diff=lfs merge=lfs -text
 audio/module0.2.wav filter=lfs diff=lfs merge=lfs -text
+audio/*.wav filter=lfs diff=lfs merge=lfs -text
